--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.21.1",
     "dotenv": "^8.2.0",
     "normalize.css": "^8.0.1",
     "react": "^17.0.2",
